# Engine3d

./: CMakeLists.txt  Makefile  README.md  armadillo.3DS
example/: CMakeLists.txt  DebugState.cpp  DebugState.h  example.cpp
include/: CMakeLists.txt  Engine.h  Engine.h~  Input.h  Model.h  Model.h~  ModelLoader.h  PhysicsEngine.h  Primitives.h  Renderer.h  Scene.h  Shaders.h  States.h  States.h~
physxcmake/: CMakeLists.txt
resources/models/: cone.3ds
resources/shaders/: FragmentShader.frag  FragmentShader.txt  VertexShader.txt  VertexShader.vert
src/: CMakeLists.txt  Engine.cpp  Engine.cpp~  FragmentShader.cpp  FragmentShader.cpp~  Input.cpp  Model.cpp  Model.cpp~  ModelLoader.cpp  PhysicsEngine.cpp  Primitives.cpp  Scene.cpp  Shaders.cpp  Shaders.cpp~  States.cpp  States.cpp~  VertexShader.cpp  VertexShader.cpp~  main.cpp  main.cpp~
